# HyperSussy

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  dev.bat  dev.sh  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  claude-code-review.yml
.streamlit/: config.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: cache.ts  client.ts  queries.ts  types.ts  websocket.ts
frontend/src/components/charts/: AlertsByEngineChart.tsx  CandlestickChart.tsx  ChartHeader.tsx  ChartToolbar.tsx  FundingChart.tsx  MarkOracleChart.tsx  OIChart.tsx  TopHoldersChart.tsx  TradeFlowChart.tsx
frontend/src/components/common/: AddressLink.tsx  AlertFeed.tsx  CoinLink.tsx  CoinSelector.tsx  DataTable.tsx  EmptyState.tsx  HoursSelector.tsx  IntervalSelector.tsx  LogModal.tsx  MetricCard.tsx  PanelCard.tsx  PanelToggleBar.tsx  PanelWrapper.tsx  SeverityFilterBar.tsx  StatusBanner.tsx  SymbolInfoBar.tsx  WatchStar.tsx
frontend/src/components/layout/: PageHeader.tsx  Sidebar.tsx
frontend/src/components/market/: MarketSummaryTable.tsx  TopHoldersTable.tsx  TopTradersTable.tsx
frontend/src/components/wallets/: FillHistoryTable.tsx  PositionsTable.tsx  SpotAssetsTable.tsx  TradesTable.tsx  WalletDetail.tsx  WhaleListTable.tsx
frontend/src/components/whales/: AddWhaleForm.tsx
frontend/src/hooks/: useContainerWidth.ts  useLightweightChart.ts
frontend/src/pages/: AlertsPage.tsx  ChartsPage.tsx  CoinView.tsx  ConfigPage.tsx  KlinesPage.tsx  MarketPage.tsx  OverviewPage.tsx  WalletDetailPage.tsx  WalletsPage.tsx  WhaleTrackerPage.tsx
frontend/src/stores/: indicatorStore.ts  panelStore.ts  watchlistStore.ts
frontend/src/theme/: chartDefaults.ts  colors.ts
frontend/src/utils/: format.ts  indicators.ts  position.ts  time.ts  timeseries.ts
src/hypersussy/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_utils.py  models.py  orchestrator.py  protocols.py  rate_limiter.py
src/hypersussy/alerts/: base.py  manager.py
src/hypersussy/alerts/sinks/: log_sink.py  tui_sink.py
src/hypersussy/api/: __init__.py  _address_cache.py  candle_service.py  deps.py  pnl_service.py  schemas.py  server.py  settings_service.py  spot_service.py  ws.py
src/hypersussy/api/routes/: _retention_window.py  alerts.py  candles.py  config.py  health.py  snapshots.py  stats.py  trades.py  whales.py
src/hypersussy/app/: actions.py  db_reader.py  navigation.py  runner.py  sink.py  state.py
src/hypersussy/dashboard/: __init__.py  actions.py  app.py  components.py  db_reader.py  formatting.py  navigation.py  runner.py  sink.py  state.py  view_models.py
src/hypersussy/dashboard/_pages/: alerts.py  charts.py  klines.py  overview.py  wallet_detail.py  whale_tracker.py
src/hypersussy/dashboard/pages/: alerts.py  overview.py  whale_tracker.py
src/hypersussy/engines/: _shared.py  _volume_window.py  base.py  funding_anomaly.py  liquidation_risk.py  oi_concentration.py  position_census.py  position_tracker.py  pre_move.py  twap_detector.py  whale_discovery.py  whale_tracker.py
src/hypersussy/exchange/: base.py
src/hypersussy/exchange/hyperliquid/: _ws_common.py  candle_stream.py  client.py  parsers.py  websocket.py
src/hypersussy/storage/: base.py  schema.sql  sqlite.py
src/hypersussy/tui/: __init__.py  app.py  messages.py
src/hypersussy/tui/css/: app.tcss
src/hypersussy/tui/widgets/: alert_feed.py  market_table.py  status_bar.py
tests/: conftest.py  test_config.py  test_logging_utils.py  test_models.py  test_orchestrator.py  test_rate_limiter.py
tests/alerts/: test_manager.py
tests/api/: test_address_cache.py  test_candle_service.py  test_pnl_service.py  test_routes.py  test_server.py  test_settings_service.py  test_ws.py
tests/dashboard/: test_actions.py  test_db_reader.py  test_navigation.py  test_runner.py  test_state.py  test_streamlit_sink.py  test_view_models.py
tests/engines/: test_funding_anomaly.py  test_liquidation_risk.py  test_oi_concentration.py  test_position_census.py  test_position_tracker_twap.py  test_pre_move.py  test_shared.py  test_twap_detector.py  test_whale_tracker.py  test_whale_tracker_dex_aware.py  test_whale_tracker_ws_positions.py
tests/exchange/: test_hl_client_active_dexes.py  test_hl_client_hip3.py  test_hl_parsers.py  test_ws_clearinghouse.py  test_ws_throttle.py
tests/storage/: test_latest_positions.py  test_sqlite.py
tests/tui/: test_alert_feed.py  test_market_table.py  test_messages.py  test_tui_sink.py
