[project]
name = "hypersussy"
version = "0.1.0"
description = "Monitoring and alerting system for suspicious activity on HyperLiquid perpetual futures"
readme = "README.md"
authors = [
    { email = "24949824+brah@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hyperliquid-python-sdk>=0.22.0",
    "aiosqlite>=0.22.1",
    "orjson>=3.11.0",
    "polars>=1.39.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "websockets>=16.0",
    "structlog>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "mypy>=1.20",
    "ruff>=0.15.0",
    "pytest-cov>=7.0",
    "aioresponses>=0.7.8",
    "types-requests>=2.33.0.20260408",
    "httpx>=0.28.0",
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "pyinstrument>=5.1.2",
]
notebooks = [
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "tqdm>=4.60",
]
api = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
]

[project.scripts]
hypersussy = "hypersussy.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/api/*.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "hyperliquid.*"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypersussy.api.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyinstrument", "pyinstrument.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:vsengine"
